# CoursCMake

./: .gitignore  .gitmodules  README.md  commandUtiles  commandUtiles.md
02_CMake/01_Module/01_HelloWorld/: CMakeLists.txt  main.cpp
02_CMake/01_Module/01_ProjetIntro/: CMakeLists.txt  main.cpp
02_CMake/01_Module/02_ProjetSimple/: CMakeLists.txt  kelvin.cpp  kelvin.h  main.cpp
02_CMake/01_Module/02_ProjetSimple/app/: main.cpp
02_CMake/02_Module/01_ProjetInterm/: CMakeLists.txt
02_CMake/02_Module/01_ProjetInterm/app/: CMakeLists.txt  main.cpp
02_CMake/02_Module/01_ProjetInterm/src/: CMakeLists.txt  kelvin.cpp  kelvin.h
02_CMake/02_Module/01_ProjetInterm/src/libFahren/: CMakeLists.txt
02_CMake/02_Module/02_ProjetAltern/: CMakeLists.txt
02_CMake/02_Module/02_ProjetAltern/app/: CMakeLists.txt  main.cpp
02_CMake/02_Module/02_ProjetAltern02/: CMakeLists.txt  readme.md
02_CMake/02_Module/02_ProjetAltern02/app/: CMakeLists.txt  main.cpp
02_CMake/02_Module/02_ProjetAltern02/src/: CMakeLists.txt
02_CMake/02_Module/02_ProjetAltern02/src/libFahren/: CMakeLists.txt
02_CMake/02_Module/02_ProjetAltern02/src/libFahren/src/: fahren.cpp
02_CMake/02_Module/02_ProjetAltern02/src/libKelvin/: CMakeLists.txt
02_CMake/02_Module/03_ProjetAlternative2/: CMakeLists.txt
02_CMake/02_Module/03_ProjetAutres/: CMakeLists.txt  readme.md
02_CMake/02_Module/03_ProjetAutres/app/: CMakeLists.txt
02_CMake/02_Module/03_ProjetAutres/src/: CMakeLists.txt
02_CMake/02_Module_Bis/01_ProjetInterm/app/: CMakeLists.txt
02_CMake/02_Module_Bis/02_ProjetAltern/app/: main.cpp
02_CMake/02_Module_Bis/03_ProjetAlternative2/: CMakeLists.txt
02_CMake/02_Module_Bis/03_ProjetAlternative2/app/: CMakeLists.txt  main.cpp
02_CMake/02_Module_Bis/03_ProjetAlternative2/src/libTemperature/inc/: kelvin.h
02_CMake/02_Module_Bis/03_ProjetAlternative2/src/libTemperature/src/: CMakeLists.txt  fahren.cpp
02_CMake/03_Module/01_ExtFindPackage/: CMakeLists.txt
02_CMake/03_Module/01_ExtFindPackage/app/: CMakeLists.txt  main.cpp
02_CMake/03_Module/01_ExtSubdirectory/: CMakeLists.txt
02_CMake/03_Module/01_ExtSubdirectory/Externe/: CMakeLists.txt
02_CMake/03_Module/01_ExtSubdirectory/app/: CMakeLists.txt
02_CMake/03_Module/02_ExtGitModule/: CMakeLists.txt
02_CMake/03_Module/02_ExtGitModule/app/: CMakeLists.txt  main.cpp
02_CMake/03_Module/02_ExtGitModule/cmake/: bypass_opencv_unsual.cmake
02_CMake/03_Module/02_ExterneGitModule/: .gitmodules  CMakeLists.txt
02_CMake/03_Module/02_ExterneGitModule/app/: CMakeLists.txt  main.cpp
02_CMake/03_Module/02_ExterneGitModule/cmake/: addGitModule.cmake
02_CMake/03_Module/02_ExterneGitModule/src/libFahren/: CMakeLists.txt
02_CMake/03_Module/03_CPM/: CMakeLists.txt  conanReadme.md
02_CMake/03_Module/03_FetchContent/: CMakeLists.txt
02_CMake/03_Module/03_FetchContent/app/: main.cpp
02_CMake/03_Module/04_IntConan/: CMakeLists.txt  Makefile  conanReadme.md
02_CMake/03_Module/04_IntConan/app/: CMakeLists.txt
02_CMake/03_Module/05_IntVcpkg/: CMakeLists.txt  VcpkgReadme.md  vcpkg.json
02_CMake/03_Module/05_IntVcpkg/install/: Executable
02_CMake/04_Module/01_CTest1/: CMakeLists.txt
02_CMake/04_Module/01_CTest_Catch2/: CMakeLists.txt
02_CMake/04_Module/01_CTest_Catch2/tests/: CMakeLists.txt  test.cpp
02_CMake/04_Module/01_CTest_Googletest/: CMakeLists.txt
02_CMake/04_Module/01_CTest_Googletest/tests/: CMakeLists.txt  test.cpp
02_CMake/04_Module/02_Warnings/: CMakeLists.txt  readme.md
02_CMake/04_Module/02_Warnings/app/: CMakeLists.txt
02_CMake/04_Module/02_Warnings_Suite/: CMakeLists.txt
02_CMake/04_Module/02_Warnings_Suite/app/: main.cpp
02_CMake/04_Module/02_Warnings_Suite/cmake/: Avertissement.cmake
02_CMake/04_Module/03_CleaningRepo_VariablesCMake/: CMakeLists.txt
02_CMake/04_Module/04_ExportEtInstallation/: CMakeLists.txt  motscle.md
02_CMake/04_Module/04_ExportEtInstallation/app/: CMakeLists.txt
02_CMake/04_Module/04_ExportEtInstallation/src/libFahren/: CMakeLists.txt  fahren.h
02_CMake/04_Module/04_ExportEtInstallation/src/libKelvin/: CMakeLists.txt  kelvin.h
02_CMake/04_Module/04_ExportEtInstallation/tests/: CMakeLists.txt
02_CMake/04_Module/05_Optimisation/: CMakeLists.txt
02_CMake/04_Module/05_Optimisation/app/: CMakeLists.txt
02_CMake/04_Module/06_Doxygen/: CMakeLists.txt  DoxygenReadme.md
02_CMake/04_Module/06_Doxygen/cmake/: Documents.cmake
02_CMake/04_Module/06_Doxygen/docs/: Doxyfile
02_CMake/04_Module/06_Doxygen/docs/html/: annotated.html  fahren_8h__dep__incl.md5  functions.html  globals_type.html  kelvin_8h__dep__incl.map  kelvin_8h__incl.map
02_CMake/04_Module/06_Doxygen/docs/html/search/: all_1.js  classes_0.js  files_1.js
02_CMake/04_Module/07_Graph/: DoxygenReadme.md  Makefile
02_CMake/05_Module/01_Clang_cmake_format/: CMakeLists.txt  format.md
02_CMake/05_Module/01_Clang_cmake_format/app/: CMakeLists.txt  main.cpp
02_CMake/05_Module/02_CodeCoverage/: CMakeLists.txt  Makefile  format.md  readme.md  readme_installation.md
02_CMake/05_Module/02_CodeCoverage/tests/: CMakeLists.txt
02_CMake/05_Module/Template_Projet/: conanfile.py
02_CMake/06_Extras/01_headerInterne/: .gitignore  CMakeLists.txt
02_CMake/06_Extras/01_headerInterne/header/: CMakeLists.txt  affichage.hpp
02_CMake/06_Extras/01_headerInterne/src/: CMakeLists.txt  main.cpp
02_CMake/06_Extras/02_headerExterne/: CMakeLists.txt
02_CMake/06_Extras/03_CrossCompilation/: .gitignore  CMakeLists.txt  README.md
02_CMake/ProjetConversion/: conversion.cpp  conversion.h  main.cpp
03_Outro/Projet_Template/: README_commandUtiles.md  readme.md  readme_installation.md
03_Outro/Projet_Template/app/: main.cpp
03_Outro/Projet_Template/cmake/: AddGitSubmodule.cmake  Documents.cmake
03_Outro/Projet_Template/configure/: version.hpp.in
03_Outro/Projet_Template/datas/: patient_conversion.json
03_Outro/Projet_Template/docs/: Doxyfile
03_Outro/Projet_Template/install/: Executable
03_Outro/Projet_Template/src/libFahren/: CMakeLists.txt  fahren.h
03_Outro/Projet_Template/src/libKelvin/: CMakeLists.txt
(+154 files in other folders)
